[gd_scene load_steps=4 format=3 uid="uid://bsbthap2allge"]

[ext_resource type="Script" path="res://scenes/technical/enemy_detection.gd" id="1_5frjj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rs34k"]
radius = 23.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7dvu4"]
radius = 323.125

[node name="EnemyDetection" type="Node2D"]
script = ExtResource("1_5frjj")

[node name="StealthArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StealthArea"]
position = Vector2(20, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rs34k")

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
polygon = PackedVector2Array(320, -30, 0, 0, 320, 30)

[node name="AggressionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggressionArea"]
shape = SubResource("CircleShape2D_7dvu4")

[node name="LineOfSightCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 3

[connection signal="body_entered" from="StealthArea" to="." method="_on_stealth_area_body_entered"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="AggressionArea" to="." method="_on_aggression_area_body_exited"]
